package co.edu.uniquindio.proyectofinal.modelos;


import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.Setter;
import lombok.ToString;
import lombok.experimental.SuperBuilder;


@Getter
@Setter
@AllArgsConstructor
@SuperBuilder
@ToString
public class Billetera {

    private double saldoBilletera;

}
