package co.edu.uniquindio.proyectofinal.modelos;


public enum TipoAlojamiento {

    CASA,
    APARTAMENTO,
    HOTEL

}
