package co.edu.uniquindio.proyectofinal.modelos;


public enum TipoUsuario {

    ADMINISTRADOR,
    CLIENTE

}
