package co.edu.uniquindio.proyectofinal.modelos.enums;


public enum CiudadAlojamiento {

    CALARCA,
    ARMENIA,
    PEREIRA

}
