package co.edu.uniquindio.proyectofinal.modelos.enums;


public enum ServicioAlojamiento {

    PISCINA,
    WIFI,
    DESAYUNO

}
