@startuml
'https://plantuml.com/sequence-diagram

class Usuario {
    - cedulaUsuario: long
    - nombreUsuario: String
    - telefonoUsuario: long
    - emailUsuario: String
    - contraseñaUsuario: String
    - codigoActivacion: String
    - codigoContraseña: String
    - usuarioActivado: boolean
    - tipoUsuario: TipoUsuario
}

enum TipoUsuario {
    ADMINISTRADOR
    CLIENTE
}

class Cliente extends Usuario {
    - billeteraCliente: Billetera
    - reservas: List<Reserva>
}

class Administrador extends Usuario {
}

class Alojamiento {
    - direccionAlojamiento: int
    - nombreAlojamiento: String
    - ciudadAlojamiento: CiudadAlojamiento
    - descripcionAlojamiento: String
    - imagenAlojamiento: String
    - precioPorNocheAlojamiento: double
    - capacidadMaximaAlojamiento: int
    - servicioAlojamiento: ServicioAlojamiento
    - tipoAlojamiento: TipoAlojamiento
    - ofertas: List<Oferta>
    - reseñas: List<Reseña>
    - reservasAlojamiento: List<Reserva>
}

enum TipoAlojamiento {
    CASA
    APARTAMENTO
    HOTEL
}

enum CiudadAlojamiento {
    CALARCA
    ARMENIA
    PEREIRA
}

enum ServicioAlojamiento {
    PISCINA
    WIFI
    DESAYUNO
}

class Casa extends Alojamiento {
    - AseoCasa: double
    - MantenimientoCasa: double
}

class Apartamento extends Alojamiento {
    - AseoApartamento: double
    - MantenimientoApartamento: double
}

class Hotel extends Alojamiento {
    - habitaciones: List<Habitacion>
}

class Habitacion {
    - numeroHabitacion: int
    - precioHabitacion: double
    - capacidadHabitacion: int
    - imagenHabitacion: String
    - descripcionHabitacion: String
}

class Billetera {
    - saldoBilletera: double
}

class Reserva {
    - idReserva: int
    - clienteReserva: Usuario
    - alojamientoReserva: Alojamiento
    - fechaInicioReserva: LocalDateTime
    - fechaFinReserva: LocalDateTime
    - numHuespedesReserva: int
}

class Factura {
    - subTotalFactura: double
    - totalFactura: double
    - fechaFactura: LocalDateTime
    - codigoFactura: String
}

class Oferta {
    - idOferta: int
    - descripcionOferta: String
    - descuentoOferta: float
    - fechaInicioOferta: LocalDateTime
    - fechaFinOferta: LocalDateTime
}

class Estadistica {
    - ocupacionPorcentual: double
    - gananciasTotales: double
}

class Reseña {
    - idReseña: int
    - cometarioReseña: String
    - calificacionReseña: float
}

Cliente "1" --> "1" Billetera
Administrador "1" --> "many" Alojamiento
Cliente "1" --> "many" Reserva
Alojamiento "1" --> "many" Oferta
Alojamiento "1" --> "many" Reseña
Alojamiento "1" --> "many" Reserva
Reserva "1" --> "1" Factura
Factura "1" --> "1" QR
Hotel "1" --> "many" Habitacion

@enduml
